--- a/conclusiones.tex
+++ b/conclusiones.tex
@@ -15,31 +15,27 @@ Nuestro objetivo fue diseñar y desarrollar técnicas que permitan generar entra
 reduciendo así la necesidad de intervención manual y maximizando la cobertura de comportamientos relevantes del software bajo prueba.
 
 Para lograr este objetivo, desarrollamos dos técnicas. La primera, presentada en el Capítulo~\ref{cap:builders}, 
-introduce un algoritmo evolutivo y otro \emph{greedy} para detectar automáticamente conjuntos de métodos constructores a partir de la API de un módulo. 
-Evaluamos estos algoritmos en varios estudios de caso tomados de la literatura y observamos que identifican de manera precisa conjuntos mínimos y suficientes de constructores, 
-en tiempos de ejecución razonables. Hasta donde sabemos, este es el primer trabajo que aborda este problema de manera automatizada, 
-el cual habitualmente se resuelve manualmente.
+introduce dos algoritmos para la identificación automática de métodos generadores de objetos a partir de la API pública de un módulo: un algoritmo evolutivo y un algoritmo \emph{greedy} o de escalada.
+Ambos algoritmos buscan detectar conjuntos de métodos constructores que permitan generar estructuras desde cero, 
+sin requerir intervención manual ni especificaciones formales. 
+Evaluamos estas técnicas en casos de estudios extraídos de la literatura, 
+y los resultados obtenidos muestran que los conjuntos identificados son suficientes y mínimos, con tiempos de ejecución razonables. 
+Hasta donde tenemos conocimiento, este constituye el primer trabajo que aborda de manera sistemática y automática el problema de la identificación de constructores, el cual ha sido tradicionalmente resuelto de manera manual.
 
-Asimismo, mostramos que tanto la generación de pruebas como las técnicas de verificación formal —como el \emph{model checking}— 
-pueden beneficiarse de esta identificación automática para construir \emph{drivers} más eficientes. 
-Este enfoque resulta prometedor para generar objetos de prueba más grandes y diversos. 
-Nuestros hallazgos confirman que BEAPI y su algoritmo evolutivo representan un paso significativo hacia la automatización 
-de la generación de entradas de prueba desde la API pública, y que otras herramientas pueden aprovechar este enfoque 
-para producir objetos de prueba más complejos y variados.
+Además, mostramos que los conjuntos de constructores obtenidos pueden ser aprovechados por herramientas de generación de pruebas, facilitando la creación de objetos más grandes y diversos. 
+También técnicas como \emph{model checking} pueden beneficiarse de estos métodos mediante la construcción automática de \emph{drivers} eficientes. 
+Los resultados obtenidos son alentadores y sugieren que esta línea de trabajo sea prometedora.
 
-Uno de los mayores desafíos en este capítulo fue la construcción de una herramienta que permitiera generar todas las estructuras acotadas, 
-hasta un número máximo \(k\) de objetos, utilizando únicamente los métodos de la API. 
-La solución propuesta funcionó adecuadamente en los casos de estudio, aunque sería deseable evitar la aleatoriedad para mejorar la cobertura sistemática. 
-El uso de herramientas de generación exhaustiva acotada se ajustaría mejor a estos objetivos \cite{Boyapati02}, 
-pero actualmente no existen herramientas de este tipo que operen directamente desde la API de un módulo.
+Uno de los principales desafíos fue desarrollar una herramienta capaz de generar todas las estructuras posibles hasta un tamaño máximo \(k\), 
+utilizando únicamente los métodos de la API. Si bien la solución implementada funcionó satisfactoriamente en los estudios de caso analizados, 
+sería deseable eliminar elementos de aleatoriedad en la generación para garantizar una cobertura más sistemática. 
+Aunque existen herramientas para generación exhaustiva acotada, ninguna de ellas produce entradas directamente a partir de la API de un módulo, 
+lo cual subraya la originalidad y el valor del enfoque propuesto en este trabajo.
 
-La segunda técnica, presentada en el Capítulo~\ref{cap:beapi}, se centra precisamente en esta necesidad. 
-BEAPI es una técnica de generación exhaustiva acotada que produce entradas de prueba únicamente a partir de la API pública del software bajo prueba (SUT), 
-sin requerir especificaciones formales. De este modo, permite generar suites exhaustivas acotadas incluso cuando existen invariantes implícitos, 
+La segunda técnica, presentada en el Capítulo~\ref{cap:beapi}, se centra precisamente en la necesidad de contar con una herriamienta
+de generación exhaustiva acotada que produzca entradas de pruebas y que opere directamente desde la API pública del software bajo prueba (SUT), sin requerir especificaciones formales.
+Surge entonces BEAPI, que permite generar suites exhaustivas acotadas incluso cuando existen invariantes implícitos, 
 reduciendo la carga de tener que escribir y ajustar especificaciones manualmente.
-
-Uno de los desafíos clave fue diseñar un mecanismo capaz de generar todas las estructuras acotadas posibles, hasta un tamaño máximo \(k\), 
-utilizando exclusivamente los métodos públicos. Aunque la solución propuesta demostró ser efectiva, sigue siendo deseable evitar cualquier aleatoriedad en el proceso. 
 Al no existir herramientas de generación exhaustiva que trabajen directamente sobre APIs, BEAPI llena un vacío importante en el área.
 
 Gracias a una serie de optimizaciones —incluyendo la identificación automática de rutinas de construcción y un mecanismo de canonización de estados—, 
