fixed latex error

--- a/evaluacion.tex
+++ b/evaluacion.tex
@@ -46,7 +46,7 @@ software}
 En la evaluación de BEAPI buscaremos responder a las siguientes preguntas de
 investigación:
 
-\end{itemize}
+\begin{itemize}
 \item \emph{RQ4}: ¿Qué tan eficiente es BEAPI para la generación exhaustiva
     acotada de objetos?
 \item\emph{RQ5}: ¿Cuál es el impacto de las optimizaciones propuestas en el
